# mc-exam-randomizer

./: Cargo.toml  README.md  package-lock.json  package.json
files/: exam.tex  exam1.csv  sample.csv  sample.txt  text_tex.tex
files/new_ones/: from_txt.blg  from_txt.synctex  from_txt.tex  sample.csv  sample.txt  sample.xlsx  sample_2.txt
files/testing/: exam_setting.tex  exam_setting_withmissing_ones.tex  sample-first-options-different.csv  sample-first-options-different.txt  sample.csv  sample.txt  template-no-begin-doc.tex  template-no-end-doc.tex  template-no-questions.tex  template.tex
files/testsing/: ex2.synctex  ex2.tex  exam.tex  final_exam.blg  final_exam.synctex  final_exam.tex
src/: App.svelte  constants.rs  errors.rs  exam_faker.rs  examreader.rs  lib.rs  main.rs  shuffler.rs
src-tauri/: tauri.conf.json
src/lib/: Counter.svelte
src/shuffler/: exam.rs  question.rs  setting.rs
