[package]
name = "mc-exam-randomizer"
description = "This is a library that help produce a randomized multiple choice (mc) exam."
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/mmogib/mc-exam-randomizer"
repository = "https://github.com/mmogib/mc-exam-randomizer"
documentation = "https://github.com/mmogib/mc-exam-randomizer"
keywords = ["random", "mc exams"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fake = { version = "2.5", features=['derive']}
rand = "0.8.5"
# tectonic = "0.9.0"
csv = "1.1.6"
thiserror ="1.0"